# research-bandits

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CICD_SETUP.md  WORKFLOWS.md
.github/workflows/: build.yml  ci-cd.yml  deploy.yml  lint.yml  security.yml  terraform-deploy.yml  terraform-destroy.yml  test.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/backend/: __init__.py  generate.py  main.py
backend/tests/: test_backend.py
frontend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
frontend/src/frontend/: __init__.py  data_manager.py  dgp.py  landing_zone.py  streamlit_helpers.py
frontend/tests/: test_frontend.py
infra/environments/dev/: .env-example  backend.tf  main.tf  outputs.tf  variables.tf
infra/environments/prd/: backend.tf  main.tf  outputs.tf  variables.tf
infra/modules/app_service/: main.tf  outputs.tf  variables.tf
infra/modules/app_service_plan/: main.tf  outputs.tf  variables.tf
infra/modules/container_app_job/: main.tf  outputs.tf  variables.tf
infra/modules/container_apps_environment/: main.tf  outputs.tf  variables.tf
infra/modules/container_registry/: main.tf  outputs.tf  variables.tf
infra/modules/log_analytics/: main.tf  outputs.tf  variables.tf
infra/scripts/: .env.example  create-aad-app-registration.sh  init-terraform-backend-on-azure.sh
notebooks/: monte_carlo_study.ipynb
src/research_bandits/: __init__.py
