[project]
name = "bandit-research-app"
version = "0.0.1"
description = "Bandit research workspace"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "backend",
    "frontend",
    "infrastructure"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
