[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frontend"
version = "0.0.1"
description = "Frontend bandit research"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.50.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "docker>=7.0.0",
]

[tool.uv]
dev-dependencies = [
]
